--- a/resources/sass/admin.sass
+++ b/resources/sass/admin.sass
@@ -120,6 +120,23 @@ select
     background-position: center right 10px
     background-repeat: no-repeat
 
+textarea
+    width: 100%
+    border: 1px solid #E0E0E0
+    border-radius: 8px
+    font-size: 14px
+    font-weight: 500
+    height: 140px
+    margin: 4px 0 0
+    padding: 2px 16px
+    -webkit-appearance: none
+    -moz-appearance: none
+    appearance: none
+    resize: none
+    &:focus
+        outline: none
+        border: 1px solid $main
+
 input[type="file"]
     border: none
     padding: 0
