--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -142,6 +142,26 @@ select {
   background-repeat: no-repeat;
 }
 
+textarea {
+  width: 100%;
+  border: 1px solid #E0E0E0;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  height: 140px;
+  margin: 4px 0 0;
+  padding: 2px 16px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  resize: none;
+}
+
+textarea:focus {
+  outline: none;
+  border: 1px solid #44c373;
+}
+
 input[type="file"] {
   border: none;
   padding: 0;
