--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,10 @@ body {
   overflow-y: initial;
 }
 
+#app {
+  padding-top: 71px;
+}
+
 @media (min-width: 1400px) {
   .container {
     max-width: 1310px;
@@ -811,6 +815,64 @@ textarea:focus {
   .text-page ul li:before {
     top: 4px;
     left: 0;
+  }
+}
+
+.discounts {
+  padding-bottom: 60px;
+}
+
+.discount-item {
+  background: #FFFFFF;
+  border-radius: 8px;
+  margin-bottom: 30px;
+  height: calc(100% - 30px);
+  transition: .3s;
+}
+
+.discount-item h2 {
+  font-size: 14px;
+  line-height: 130%;
+  margin-bottom: 10px;
+}
+
+.discount-item__img {
+  border-radius: 8px;
+  width: 100%;
+}
+
+.discount-item__text {
+  padding: 15px;
+}
+
+.discount-item__time {
+  color: #828282;
+  font-size: 12px;
+  font-weight: 400;
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+
+.discount-item:hover {
+  transform: translateY(-5px);
+}
+
+@media (min-width: 576px) {
+  .discount-item__info {
+    height: 84px;
+  }
+}
+
+@media (min-width: 768px) {
+  .discount-item h2 {
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .discount-item__text {
+    padding: 20px;
   }
 }
 
