--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -22,6 +22,9 @@ body
 	font-weight: 500
 	overflow-y: initial
 
+#app
+    padding-top: 71px
+
 @media (min-width: 1400px)
 	.container
 		max-width: 1310px
@@ -634,3 +637,46 @@ textarea
 				&:before
 					top: 4px
 					left: 0
+
+.discounts
+    padding-bottom: 60px
+
+.discount-item
+    background: $white
+    border-radius: 8px
+    margin-bottom: 30px
+    height: calc(100% - 30px)
+    transition: .3s
+    h2
+        font-size: 14px
+        line-height: 130%
+        margin-bottom: 10px
+    &__img
+        border-radius: 8px
+        width: 100%
+    &__text
+        padding: 15px
+    &__time
+        color: $text-light
+        //background: url('../img/discounts/clock.svg') left center no-repeat
+        font-size: 12px
+        font-weight: 400
+        padding-left: 20px
+        margin-bottom: 20px
+    &:hover
+        transform: translateY(-5px)
+
+@media (min-width: 576px)
+    .discount-item
+        &__info
+            height: 84px
+
+@media (min-width: 768px)
+    .discount-item
+        h2
+            font-size: 16px
+            line-height: 19px
+@media (min-width: 1200px)
+    .discount-item
+        &__text
+            padding: 20px
