--- a/public/css/main.css
+++ b/public/css/main.css
@@ -876,3 +876,181 @@ textarea:focus {
   }
 }
 
+.discountsitem {
+  padding: 0 0 40px;
+}
+
+.discountsitem h1 {
+  font-size: 16px;
+  line-height: 19px;
+  color: #202020;
+}
+
+.discountsitem h2 {
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.discountsitem__back {
+  color: #828282;
+  font-size: 12px;
+  line-height: 12px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.discountsitem__back svg {
+  margin-right: 6px;
+}
+
+.discountsitem__back:hover {
+  color: #44C373;
+}
+
+.discountsitem__back:hover svg path {
+  stroke: #44C373;
+}
+
+.discountsitem__item {
+  background: #FFFFFF;
+  border-radius: 10px;
+  margin-bottom: 30px;
+}
+
+.discountsitem__img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.discountsitem__text {
+  padding: 10px 10px 20px;
+  font-size: 12px;
+  line-height: 15px;
+  color: #4F4F4F;
+}
+
+.discountsitem .time {
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .discountsitem h2 {
+    display: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .discountsitem {
+    padding: 0 0 90px;
+  }
+  .discountsitem h1 {
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 10px;
+  }
+  .discountsitem__back {
+    font-size: 16px;
+    line-height: 19px;
+    color: #4F4F4F;
+    margin-bottom: 46px;
+  }
+  .discountsitem__back svg {
+    margin-right: 10px;
+  }
+  .discountsitem__back svg path {
+    stroke: #4F4F4F;
+  }
+  .discountsitem__text {
+    padding: 40px;
+    font-size: 16px;
+    line-height: 19px;
+  }
+  .discountsitem__description {
+    margin-bottom: 22px;
+  }
+  .discountsitem .time {
+    background-size: 20px;
+    font-size: 14px;
+    line-height: 17px;
+    padding-left: 25px;
+  }
+}
+
+.discount-other {
+  padding: 10px;
+  display: flex;
+  align-items: flex-start;
+  background: #FFFFFF;
+  border-radius: 8px;
+  margin-bottom: 15px;
+  transition: .3s;
+}
+
+.discount-other h3 {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+  margin-bottom: 10px;
+}
+
+.discount-other__img {
+  width: 118px;
+  margin-right: 10px;
+  border-radius: 4px;
+}
+
+.discount-other__text {
+  width: calc(100% - 128px);
+}
+
+.discount-other__time {
+  color: #828282;
+  font-size: 11px;
+  font-weight: 400;
+  padding-left: 20px;
+  margin-bottom: 0;
+}
+
+.discount-other:hover {
+  transform: translateY(-5px);
+}
+
+@media (min-width: 768px) {
+  .discount-other {
+    flex-wrap: wrap;
+  }
+  .discount-other__img {
+    width: 100%;
+  }
+  .discount-other__text {
+    width: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .discount-other {
+    margin-bottom: 15px;
+  }
+  .discount-other__img {
+    width: 110px;
+  }
+  .discount-other__text {
+    width: calc(100% - 120px);
+  }
+}
+
+@media (min-width: 1200px) {
+  .discount-other {
+    padding: 15px;
+    margin-bottom: 30px;
+  }
+  .discount-other__img {
+    width: 167px;
+    margin-right: 15px;
+  }
+  .discount-other__text {
+    width: calc(100% - 182px);
+  }
+}
+
