--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -680,3 +680,127 @@ textarea
     .discount-item
         &__text
             padding: 20px
+
+.discountsitem
+    padding: 0 0 40px
+    h1
+        font-size: 16px
+        line-height: 19px
+        color: $text
+    h2
+        font-size: 16px
+        line-height: 19px
+    &__back
+        color: $text-light
+        font-size: 12px
+        line-height: 12px
+        display: flex
+        align-items: center
+        margin-bottom: 10px
+        svg
+            margin-right: 6px
+        &:hover
+            color: $main
+            svg path
+                stroke: $main
+    &__item
+        background: $white
+        border-radius: 10px
+        margin-bottom: 30px
+    &__img
+        width: 100%
+        border-radius: 10px
+    &__text
+        padding: 10px 10px 20px
+        font-size: 12px
+        line-height: 15px
+        color: #4F4F4F
+    .time
+        margin-bottom: 0
+
+@media (min-width: 768px)
+    .discountsitem
+        h2
+            display: none
+
+@media (min-width: 1200px)
+    .discountsitem
+        padding: 0 0 90px
+        h1
+            font-size: 20px
+            line-height: 24px
+            margin-bottom: 10px
+        &__back
+            font-size: 16px
+            line-height: 19px
+            color: #4F4F4F
+            margin-bottom: 46px
+            svg
+                margin-right: 10px
+                path
+                    stroke: #4F4F4F
+        &__text
+            padding: 40px
+            font-size: 16px
+            line-height: 19px
+        &__description
+            margin-bottom: 22px
+        .time
+            background-size: 20px
+            font-size: 14px
+            line-height: 17px
+            padding-left: 25px
+
+.discount-other
+    padding: 10px
+    display: flex
+    align-items: flex-start
+    background: $white
+    border-radius: 8px
+    margin-bottom: 15px
+    transition: .3s
+    h3
+        font-size: 14px
+        font-weight: 700
+        line-height: 17px
+        margin-bottom: 10px
+    &__img
+        width: 118px
+        margin-right: 10px
+        border-radius: 4px
+    &__text
+        width: calc(100% - 128px)
+    &__time
+        color: $text-light
+        font-size: 11px
+        font-weight: 400
+        padding-left: 20px
+        margin-bottom: 0
+    &:hover
+        transform: translateY(-5px)
+
+@media (min-width: 768px)
+    .discount-other
+        flex-wrap: wrap
+        &__img
+            width: 100%
+        &__text
+            width: 100%
+
+@media (min-width: 992px)
+    .discount-other
+        margin-bottom: 15px
+        &__img
+            width: 110px
+        &__text
+            width: calc(100% - 120px)
+
+@media (min-width: 1200px)
+    .discount-other
+        padding: 15px
+        margin-bottom: 30px
+        &__img
+            width: 167px
+            margin-right: 15px
+        &__text
+            width: calc(100% - 182px)
