--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,277 +1,1 @@
-html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
-
-body {
-  background: #f2f2f2;
-  color: #202020;
-  font-family: 'Inter';
-  font-size: 16px;
-  font-weight: 500;
-  overflow-y: initial;
-}
-
-img {
-  max-width: 250px;
-}
-
-a {
-  color: #44c373;
-}
-
-a:hover {
-  color: #008F28;
-  text-decoration: none;
-}
-
-.btn-primary {
-  background: #44c373;
-  border-color: #44c373;
-}
-
-.btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:not(:disabled):not(.disabled):active {
-  background: #008F28;
-  border-color: #008F28;
-}
-
-.btn-primary:focus, .btn-primary:not(:disabled):not(.disabled):active {
-  box-shadow: 0 0 0 0.2rem rgba(68, 195, 115, 0.25);
-}
-
-.btn-danger {
-  background: #eb5757;
-  border-color: #EB5757;
-}
-
-.btn-danger:hover, .btn-danger:active, .btn-danger:focus, .btn-danger:not(:disabled):not(.disabled):active {
-  background: #B71A0A;
-  border-color: #B71A0A;
-}
-
-.btn-danger:focus, .btn-danger:not(:disabled):not(.disabled):active {
-  box-shadow: 0 0 0 0.2rem rgba(235, 87, 87, 0.25);
-}
-
-h1 {
-  font-size: 24px;
-  line-height: 37px;
-  margin-bottom: 0;
-}
-
-h2 {
-  font-size: 20px;
-  line-height: 37px;
-  margin-bottom: 0;
-}
-
-h3 {
-  font-size: 18px;
-}
-
-.table {
-  margin: 20px 0 0;
-}
-
-.table th:first-child {
-  width: 50px;
-}
-
-.table th:nth-child(2) {
-  width: 85px;
-}
-
-.table td {
-  vertical-align: middle;
-}
-
-.table img {
-  width: 100%;
-  height: 40px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
-}
-
-.table img.icon {
-  width: 40px;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.card {
-  margin-bottom: 20px;
-}
-
-label {
-  margin: 20px 0;
-  display: block;
-  color: #828282;
-}
-
-label img {
-  display: block;
-  margin: 20px 0;
-}
-
-input,
-select {
-  width: 100%;
-  border: 1px solid #E0E0E0;
-  border-radius: 8px;
-  font-size: 14px;
-  font-weight: 500;
-  height: 40px;
-  margin: 4px 0 0;
-  padding: 2px 16px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-input:focus,
-select:focus {
-  outline: none;
-  border: 1px solid #44c373;
-}
-
-select {
-  background-image: url(/images/select.svg?06e9b87ef1d6f05e021915a8031c51bc);
-  background-position: center right 10px;
-  background-repeat: no-repeat;
-}
-
-textarea {
-  width: 100%;
-  border: 1px solid #E0E0E0;
-  border-radius: 8px;
-  font-size: 14px;
-  font-weight: 500;
-  height: 140px;
-  margin: 4px 0 0;
-  padding: 2px 16px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  resize: none;
-}
-
-textarea:focus {
-  outline: none;
-  border: 1px solid #44c373;
-}
-
-input[type="file"] {
-  border: none;
-  padding: 0;
-  border-radius: 0;
-}
-
-.checkbox {
-  font-size: 14px;
-  margin: 0 0 10px;
-}
-
-.checkbox input {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
-
-.checkbox__text {
-  position: relative;
-  padding: 0 0 0 30px;
-  cursor: pointer;
-}
-
-.checkbox__text:before {
-  content: '';
-  position: absolute;
-  top: 2px;
-  left: 0;
-  width: 20px;
-  height: 20px;
-  border-radius: 5px;
-  border: 1px solid #E0E0E0;
-}
-
-.checkbox__text:after {
-  content: url(/images/check.svg?7b749f8342012ce5175b8abef29996a4);
-  position: absolute;
-  top: 3px;
-  left: 3px;
-  opacity: 0;
-}
-
-.checkbox input:checked + .checkbox__text:before {
-  background: #44c373;
-  border: 1px solid #44c373;
-}
-
-.checkbox input:checked + .checkbox__text:after {
-  opacity: 1;
-}
-
-.radio {
-  margin: 0;
-  height: 100%;
-}
-
-.radio input {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-  margin: 10px 0 0 7px;
-  height: auto;
-}
-
-.radio__text {
-  position: relative;
-  cursor: pointer;
-  text-align: center;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px;
-}
-
-.radio input:checked + .radio__text {
-  color: #44c373;
-  background: #FFFFFF;
-  box-shadow: 0px 4px 3px rgba(64, 94, 72, 0.1);
-}
-
-.composition {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.composition .checkbox {
-  width: 25%;
-}
-
-ul {
-  padding: 0;
-  list-style: none;
-}
-
-@media (max-width: 1199px) {
-  .composition .checkbox {
-    width: 33%;
-  }
-}
-
-@media (max-width: 991px) {
-  .composition .checkbox {
-    width: 50%;
-  }
-}
-
-@media (max-width: 575px) {
-  .composition .checkbox {
-    width: 100%;
-  }
-}
-
+body,html{max-width:100%;overflow-x:hidden}body{background:#f2f2f2;color:#202020;font-family:Inter;font-size:16px;font-weight:500;overflow-y:initial}img{max-width:250px}a{color:#44c373}a:hover{color:#008f28;text-decoration:none}.btn-primary{background:#44c373;border-color:#44c373}.btn-primary:active,.btn-primary:focus,.btn-primary:hover,.btn-primary:not(:disabled):not(.disabled):active{background:#008f28;border-color:#008f28}.btn-primary:focus,.btn-primary:not(:disabled):not(.disabled):active{box-shadow:0 0 0 .2rem rgba(68,195,115,.25)}.btn-danger{background:#eb5757;border-color:#eb5757}.btn-danger:active,.btn-danger:focus,.btn-danger:hover,.btn-danger:not(:disabled):not(.disabled):active{background:#b71a0a;border-color:#b71a0a}.btn-danger:focus,.btn-danger:not(:disabled):not(.disabled):active{box-shadow:0 0 0 .2rem rgba(235,87,87,.25)}h1{font-size:24px}h1,h2{line-height:37px;margin-bottom:0}h2{font-size:20px}h3{font-size:18px}.table{margin:20px 0 0}.table th:first-child{width:50px}.table th:nth-child(2){width:85px}.table td{vertical-align:middle}.table img{width:100%;height:40px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center}.table img.icon{width:40px;-o-object-fit:contain;object-fit:contain}.card{margin-bottom:20px}label{color:#828282}label,label img{margin:20px 0;display:block}input,select{width:100%;border:1px solid #e0e0e0;border-radius:8px;font-size:14px;font-weight:500;height:40px;margin:4px 0 0;padding:2px 16px;-webkit-appearance:none;-moz-appearance:none;appearance:none}input:focus,select:focus{outline:none;border:1px solid #44c373}select{background-image:url(/images/select.svg?06e9b87ef1d6f05e021915a8031c51bc);background-position:center right 10px;background-repeat:no-repeat}textarea{width:100%;border:1px solid #e0e0e0;border-radius:8px;font-size:14px;font-weight:500;height:140px;margin:4px 0 0;padding:2px 16px;-webkit-appearance:none;-moz-appearance:none;appearance:none;resize:none}textarea:focus{outline:none;border:1px solid #44c373}input[type=file]{border:none;padding:0;border-radius:0}.checkbox{font-size:14px;margin:0 0 10px}.checkbox input{position:absolute;z-index:-1;opacity:0}.checkbox__text{position:relative;padding:0 0 0 30px;cursor:pointer}.checkbox__text:before{content:"";position:absolute;top:2px;left:0;width:20px;height:20px;border-radius:5px;border:1px solid #e0e0e0}.checkbox__text:after{content:url(/images/check.svg?7b749f8342012ce5175b8abef29996a4);position:absolute;top:3px;left:3px;opacity:0}.checkbox input:checked+.checkbox__text:before{background:#44c373;border:1px solid #44c373}.checkbox input:checked+.checkbox__text:after{opacity:1}.radio{margin:0;height:100%}.radio input{position:absolute;z-index:-1;opacity:0;margin:10px 0 0 7px;height:auto}.radio__text{position:relative;cursor:pointer;text-align:center;height:100%;display:flex;justify-content:center;align-items:center;border-radius:20px}.radio input:checked+.radio__text{color:#44c373;background:#fff;box-shadow:0 4px 3px rgba(64,94,72,.1)}.composition{display:flex;flex-wrap:wrap}.composition .checkbox{width:25%}ul{padding:0;list-style:none}@media (max-width:1199px){.composition .checkbox{width:33%}}@media (max-width:991px){.composition .checkbox{width:50%}}@media (max-width:575px){.composition .checkbox{width:100%}}
