--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -804,3 +804,27 @@ textarea
             margin-right: 15px
         &__text
             width: calc(100% - 182px)
+
+.map
+    &__info
+        margin-bottom: 30px
+    &__map
+        height: 628px
+        margin-bottom: 60px
+
+@media (min-width: 1200px)
+    .map
+        h1
+            margin-bottom: 4px
+        p
+            font-size: 18px
+            font-weight: 400
+            margin-bottom: 20px
+        &__info
+            display: flex
+            justify-content: space-between
+            align-items: center
+        &__alert
+            font-size: 14px
+        &__map
+            margin-bottom: 120px
