--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -732,6 +732,246 @@ textarea
                     top: 4px
                     left: 0
 
+
+header
+    padding: 10px 0
+    background: $bg
+    position: fixed
+    width: 100%
+    top: 0
+    z-index: 10
+    .custom-logo
+        display: block
+        margin: 5px 0 3px
+        img
+            max-height: 100%
+    .nav
+        &__mobile
+            display: none
+    ul
+        display: flex
+        justify-content: space-between
+        width: 100%
+        margin: 16px 16px 0 0
+        span
+            color: $text-light
+        a.active,
+        .router-link-active
+            color: $main
+        .router-link-exact-active
+            span
+                color: $main
+    p
+        margin-bottom: 0
+    .phone
+        font-size: 16px
+        font-weight: 700
+        display: flex
+        align-items: center
+        margin: 5px 0 0
+        svg
+            margin-right: 8px
+    .address
+        font-size: 13px
+        color: $text-light
+        span
+            color: $text
+    .button-cart
+        border-radius: 43px
+        display: flex
+        justify-content: space-between
+        align-items: center
+        height: 100%
+        padding: 5px 20px 5px 16px
+        white-space: nowrap
+        svg
+            margin-right: 2px
+        &__count
+            background: $white
+            box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.1)
+            border-radius: 13px
+            color: $text
+            font-weight: 700
+            padding: 3px 7px
+            display: inline-block
+        &__price
+            font-size: 18px
+            font-weight: bold
+    .close
+        display: none
+        opacity: 1
+        position: relative
+        right: -25px
+        cursor: pointer
+
+@media (max-width: 575px)
+    header
+        padding: 7px 0 2px
+        border-bottom: 1px solid $light
+        .hamburger
+            margin-left: -5px
+            position: relative
+        .custom-logo
+            height: 30px
+            text-align: center
+            margin: -2px 0 3px 14px
+        .nav
+            position: absolute
+            top: 40px
+            left: -100%
+            height: calc(100vh - 40px)
+            background: $white
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+            font-size: 16px
+            font-weight: 700
+            padding: 0
+            transition: .3s
+            z-index: 2
+            ul
+                flex-direction: column
+                align-items: center
+                margin: 0 0 20px
+                li
+                    margin-bottom: 5px
+                span
+                    color: $text
+            &__mobile
+                text-align: center
+                &__phone,
+                &__address
+                    margin-bottom: 14px
+                    a
+                        display: flex
+                        align-items: center
+                        justify-content: center
+                    svg
+                        margin-right: 5px
+                &__address
+                    span
+                        font-size: 14px
+                        font-weight: 500
+                        color: $text-light
+                        display: block
+            &.active
+                left: 0
+                .nav__mobile
+                    display: block
+        .phone
+            display: block
+            margin: -1px 0 0 -2px
+            position: relative
+            span
+                display: none
+        .address
+            display: none
+        .button-cart
+            background: transparent
+            padding: 0
+            box-shadow: none
+            display: block
+            position: relative
+            svg
+                margin: 0 0 0 3px
+                path
+                    fill: $text
+            &__count
+                position: absolute
+                font-size: 10px
+                color: $text
+                background: $main
+                top: -2px
+                right: -32px
+                padding: 0 5px
+            &__price
+                display: none
+        &.active
+            .hamburger
+                display: none
+            .phone
+                display: none
+            .button-cart
+                display: none
+            .close
+                display: block
+
+@media (max-width: 400px)
+    header
+        .hamburger
+            &:after
+                content: ''
+                width: 1px
+                height: 40px
+                background: $light
+                position: absolute
+                top: -7px
+                right: -2px
+        .phone
+            &:after
+                content: ''
+                width: 1px
+                height: 40px
+                background: $light
+                position: absolute
+                top: -7px
+                left: -13px
+        .button-cart,
+        .close
+            &:after
+                content: ''
+                width: 1px
+                height: 40px
+                background: $light
+                position: absolute
+                top: -7px
+                left: -6px
+        .close
+            &:after
+                left: -12px
+
+@media (min-width: 576px)
+    header
+        ul
+            margin: 4px 0 0 0
+            flex-wrap: wrap
+            li:first-child
+                display: none
+
+@media (min-width: 768px)
+    header
+        ul
+            margin: 16px 0 0 0
+
+@media (min-width: 992px)
+    header
+        .phone
+            justify-content: flex-end
+        .address
+            text-align: right
+
+@media (min-width: 1200px)
+    header
+        .button-cart
+            &__price
+                font-size: 15px
+
+@media (min-width: 1400px)
+    header
+        padding: 10px 0 12px
+        ul
+            margin: 16px 16px 0 14px
+            li:first-child
+                display: block
+        .phone
+            justify-content: flex-start
+        .address
+            text-align: left
+        .button-cart
+            &__price
+                font-size: 18px
+
 .discounts
     padding-bottom: 60px
 
