--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -1242,3 +1242,22 @@ header
             p
                 font-size: 16px
                 line-height: 19px
+
+.error
+    background: url('/../img/common/404.png') center right
+    text-align: center
+    min-height: 500px
+    &__img
+        margin: 30px 0 20px
+
+@media (min-width: 992px)
+    .error
+        height: calc(100vh - 106px - 409px)
+
+@media (min-width: 1200px)
+    .error
+        height: calc(100vh - 91px - 305px)
+        p
+            font-size: 16px
+        &__img
+            margin: 30px 0
