--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -1243,6 +1243,81 @@ header
                 font-size: 16px
                 line-height: 19px
 
+.contacts
+    padding-bottom: 60px
+    .menu.simple
+        margin-bottom: 0
+    h1
+        color: $white
+    h2
+        font-weight: 500
+        font-size: 16px
+        line-height: 19px
+        color: $main
+        display: flex
+        justify-content: center
+        align-items: center
+        margin-bottom: 6px
+        img
+            margin-right: 10px
+    p
+        font-size: 16px
+        font-weight: 700
+        margin-bottom: 0
+    &__header
+        background-size: cover
+        background-position: center
+        height: 120px
+        text-align: center
+        display: flex
+        justify-content: center
+        align-items: center
+        margin-bottom: 20px
+    &__block
+        background: $white
+        box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.03)
+        border-radius: 8px
+        padding: 26px 15px
+        text-align: center
+        margin-bottom: 15px
+        a
+            svg
+                display: none
+    &__map
+        height: 400px
+    &__links
+        display: flex
+        justify-content: space-between
+        align-items: center
+        height: calc(100% - 30px)
+        margin: 0 0 20px
+        .links
+            margin-bottom: 0
+
+@media (min-width: 768px)
+    .contacts
+        &__links
+            margin: 12px 0 46px
+        &__header
+            height: 180px
+
+@media (min-width: 1200px)
+    .contacts
+        h1
+            font-size: 35px
+        &__header
+            margin-bottom: 60px
+            height: 250px
+        &__block
+            margin-bottom: 30px
+        &__map
+            height: 100%
+        &__links
+            font-size: 16px
+            margin: 12px 0 46px
+            height: auto
+
+
 .error
     background: url('/../img/common/404.png') center right
     text-align: center
