--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -1336,3 +1336,107 @@ header
             font-size: 16px
         &__img
             margin: 30px 0
+
+footer
+    background: $white
+    padding: 18px 0
+    text-align: center
+    .custom-logo
+        margin-bottom: 18px
+        display: inline-block
+
+.footer
+    &__phone,
+    &__address
+        font-weight: 700
+        margin-bottom: 18px
+        svg
+            margin-right: 5px
+        .text-l
+            display: block
+            font-size: 12px
+            font-weight: 400
+            color: $text-light
+    &__outer
+        display: flex
+        flex-direction: column-reverse
+    &__nav
+        display: flex
+        justify-content: center
+        flex-wrap: wrap
+        margin-bottom: 10px
+        li
+            margin: 0 5px 10px
+        a
+            color: $text-light
+            font-weight: 400
+    &__menu
+        display: flex
+        justify-content: center
+        flex-wrap: wrap
+        margin-bottom: 10px
+        h3
+            font-size: 14px
+            font-weight: 600
+            margin: 0 5px 16px
+    &__copyright
+        font-size: 12px
+        font-weight: 400
+        line-height: 15px
+        color: $text-light
+        p
+            margin-bottom: 0
+    &__pay
+        display: flex
+        justify-content: center
+        align-items: center
+        flex-wrap: wrap
+        padding: 15px 0 20px
+        img
+            margin: 0 5px 10px
+
+@media (min-width: 1200px)
+    footer
+        text-align: left
+        padding: 25px 0
+    .footer
+        &__outer
+            flex-direction: row
+        &__phone,
+        &__address
+            svg
+                margin: 0
+        &__menu
+            justify-content: space-between
+        &__pay
+            justify-content: flex-start
+            img
+                margin: 0 5px 10px 0
+
+@media (min-width: 1400px)
+    .footer
+        &__info
+            box-shadow: 0px 15px 30px rgba(34, 39, 41, 0.05)
+        &__phone,
+        &__address
+            font-size: 16px
+            svg
+                margin-right: 5px
+            .text-l
+                font-size: 14px
+        &__outer
+            justify-content: space-between
+        &__nav
+            margin-top: 5px
+            li
+                margin: 0 21px 0 0
+        &__links
+            a
+                margin: 0 0 0 10px
+        &__menu
+            margin: 20px 0 10px
+        &__copyright
+            padding: 20px 0
+        &__pay
+            padding: 10px 0 20px
+            justify-content: space-between
