--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -1317,6 +1317,10 @@ header
             margin: 12px 0 46px
             height: auto
 
+.payment
+    img
+        margin-bottom: 20px
+
 
 .error
     background: url('/../img/common/404.png') center right
@@ -1398,8 +1402,10 @@ footer
 @media (min-width: 1200px)
     footer
         text-align: left
-        padding: 25px 0
+        padding: 0 0 25px
     .footer
+        &__info
+            padding-top: 25px
         &__outer
             flex-direction: row
         &__phone,
