--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -613,6 +613,8 @@ textarea
         font-size: 14px
         line-height: 17px
         color: $text-light
+    .contacts__map
+        height: 170px
 
 .suggestion__suggestions
     background: $white
