--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -1321,6 +1321,28 @@ header
         margin-bottom: 20px
 
 
+.success
+    text-align: center
+    min-height: 460px
+    p
+        color: $text-light
+        span
+            color: $text
+    &__img
+        margin: 30px 0 20px
+
+@media (min-width: 992px)
+    .success
+        height: calc(100vh - 106px - 409px)
+
+@media (min-width: 1200px)
+    .success
+        height: calc(100vh - 91px - 305px)
+        p
+            font-size: 16px
+        &__img
+            margin: 30px 0
+
 .error
     background: url('/../img/common/404.png') center right
     text-align: center
