mobile header + styles

--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -23,7 +23,7 @@ body
     overflow-y: initial
 
 #app
-    padding-top: 71px
+    padding-top: 41px
 
 @media (min-width: 1400px)
     .container
@@ -642,7 +642,14 @@ textarea
             color: $white
 
 
+@media (min-width: 576px)
+    #app
+        padding-top: 117px
+
 @media (min-width: 992px)
+    #app
+        padding-top: 106px
+
     h1
         font-size: 25px
         line-height: 30px
@@ -680,6 +687,9 @@ textarea
 @media (min-width: 1200px)
     body
         overflow-x: unset
+
+    #app
+        padding-top: 71px
 
     .button
         padding: 9px 22px
