--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,7 +14,7 @@ body {
 }
 
 #app {
-  padding-top: 71px;
+  padding-top: 41px;
 }
 
 @media (min-width: 1400px) {
@@ -730,7 +730,16 @@ textarea:focus {
   color: #FFFFFF;
 }
 
+@media (min-width: 576px) {
+  #app {
+    padding-top: 117px;
+  }
+}
+
 @media (min-width: 992px) {
+  #app {
+    padding-top: 106px;
+  }
   h1 {
     font-size: 25px;
     line-height: 30px;
@@ -773,6 +782,9 @@ textarea:focus {
 @media (min-width: 1200px) {
   body {
     overflow-x: unset;
+  }
+  #app {
+    padding-top: 71px;
   }
   .button {
     padding: 9px 22px;
